fix: improve preview UI rendering, localization, and async cache writes